# disease-sim

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dissim/: centrality.py  igraph_util.py  main.py  rng.py  sim.py
doc/: 22-09-06.ltx  centrality-comparison.ltx  running-simulations.md
fig/: regular-graph-example.vsdx
graphs/: karate.gml
notebooks/: README.md  centrality-correlation-2.ipynb  centrality-correlation.ipynb  compare-spread-eig-method-1.ipynb  compare-spread-eig-method-2.ipynb  eigen-example.ipynb  extreme-eigenvalues.ipynb  largest-eigenvalue-house.ipynb  sim-experiment-00.ipynb  sim-experiment-01.ipynb  sim-experiment-02.ipynb  test01.ipynb  test02.ipynb  unlabeled-plots.ipynb
src/dissim/: centrality.py  death_ftn.py  main.py  rng.py  sim.py
