[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "disease-sim"
version = "0.1.0"
authors = [
    {name = "Sandra Kingan", email = "skingan@brooklyn.cuny.edu"},
    {name = "Robert Kingan", email = "robertkingan@gmail.com"}
]
description = "Simple disease progression simulator"
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
